--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="ru">
     <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+        {% block stylesheets %}
+            {{ encore_entry_link_tags('app') }}
+            <link rel="stylesheet" href="/style/style.css">
+            <link rel="stylesheet" href="/AboutUS/aboutUs.css">
+            <link rel="stylesheet" href="/Services/services.css">
+            <link rel="stylesheet" href="/Blog/blog.css">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/icon.css" integrity="sha256-Qm8mv8NyEDwniBPKGqdKIpYT0KFZlWY7GJ2F0cs3N/g=" crossorigin="anonymous" />
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/item.css" integrity="sha256-Zmhl7JzF/rWYir2WAAbCgfX9pJtoQ43vQOYsRv6jqAo=" crossorigin="anonymous" />
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/button.css" integrity="sha256-c9MUM6YakVqeTCPglbaeebZVH9GEZay8GPACCYydRaY=" crossorigin="anonymous" />
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/menu.css" integrity="sha256-QXVhP5B9h80o2da7dZ1P0o/iU6y/q26xiudmCtphp5k=" crossorigin="anonymous" />
+            {#<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.css">#}
+            <link rel="shortcut icon" href="{{ asset('/img/Logo.jpg') }}" type="image/x-icon">
+
+
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+                  crossorigin="anonymous" />
+            <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+                  crossorigin="anonymous">
+        {% endblock %}
     </head>
     <body>
+    {% include '_header.html.twig' %}
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+    {% include '_footer.html.twig' %}
+    {% block javascripts %}
+        {{ encore_entry_script_tags('app') }}
+    {% endblock %}
     </body>
 </html>
