--- a/templates/admin/editArticle.html.twig
+++ b/templates/admin/editArticle.html.twig
@@ -3,16 +3,16 @@
 
 {% block body %}
     {{ form_start(form) }}
-    {{ form_row(form.title) }}
-    {{ form_row(form.slug) }}
-    {{ form_row(form.description) }}
+    {{ form_row(form.title,{'attr':{'class':'nameArticle'}}) }}
+    {{ form_row(form.slug,{'attr':{'class':'nameArticle'}}) }}
+    {{ form_row(form.description,{'attr':{'class':'nameArticle'}}) }}
     {% if article.getImg != null %}
-        <img src="/uploads/{{ article.getImg }}" alt="Select your image" class="aImage">
+        <img src="/uploads/{{ article.getImg }}" alt="Select your image" class="aImage" width="400px" height="auto">
     {% endif %}
     {{ form_row(form.img) }}
-    {{ form_row(form.text,{'attr':{'class':'editor'}}) }}
+    {{ form_row(form.text,{'id':'editor'}) }}
     {{ form_row(form.save) }}
-    {{ form_end(form) }}
+    {{ form_end(form,{'id':'buttonSendMes'}) }}
 {% endblock %}
 {% block javascripts %}
     {{ encore_entry_script_tags('app') }}
