--- a/templates/pages/servicesPage.html.twig
+++ b/templates/pages/servicesPage.html.twig
@@ -3,103 +3,234 @@
 {% block title %}Services{% endblock %}
 {% block body %}
 
-<nav class="SrvN">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 col-md-12 navB">
-                <h1>Все наши услуги</h1>
-                <p>Вы офигееите от нашего професионализма<br>где вы найдете еще такую команду? </p>
-            </div>
-        </div>
-        <div class="row butPos">
-            <div class="col-lg-12 col-md-12 butInNav">
-                <p>Заказать Услугу</p>
-            </div>
-        </div>
-    </div>
 
-</nav>
+    <header>
+
+    </header>
 
 
 
 
-<main>
-
-    <section class="creatS">
-
+    <nav class="SrvN">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 col-md-12 creatInf">
-                    <h1>Создание сайтов,какой сайт вам нужен?</h1>
-                    <p>тут описание услуг которые будем предоставлять</p>
+                <div class="col-lg-12 col-md-12 navB">
+                    <h1>Страница услуг</h1>
+                    <p>Вы офигееите от нашего професионализма<br>где вы найдете еще такую команду? </p>
                 </div>
             </div>
-
-            <div class="row firstB">
-                <div class="col-lg-2 col-md-2 creatF"><p>Лендинг Страница <i class="fas fa-arrow-right"></i></p></div>
-                <div class="col-lg-2 col-md-2 creatF"><p>Интернет магазин <i class="fas fa-arrow-right"></i></p></div>
-                <div class="col-lg-2 col-md-2 creatF"><p>Информационный сайт <i class="fas fa-arrow-right"></i></p></div>
-                <div class="col-lg-2 col-md-2 creatF"><p>Сайт каталог <i class="fas fa-arrow-right"></i></p></div>
-            </div>
-
-            <div class="row oneB">
-                <div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>
-                <div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>
-                <div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>
-                <div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>
-            </div>
-
-            <div class="row twoS">
-                <div class="col-lg-12 col-md-12 twoB">
-                    <p>Не могу разобраться, заказать звонок</p>
-                </div>
-            </div>
-
-        </div>
-
-    </section>
-
-
-
-    <section class="seoW">
-
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 col-md-12 seoInf">
-                    <h1>Давайте попробуем комплексное Seo - продвижение</h1>
-                    <p>тут описание услуг которые будем предоставлять</p>
-                </div>
-            </div>
-
-            <div class="row firstB">
-                <div class="col-lg-2 col-md-2 creatF"><p>Лендинг Страница <i class="fas fa-arrow-right"></i></p></div>
-                <div class="col-lg-2 col-md-2 creatF"><p>Интернет магазин <i class="fas fa-arrow-right"></i></p></div>
-            </div>
-
-            <div class="row oneB">
-                <div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>
-                <div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>
-            </div>
-
-        </div>
-
-    </section>
-
-
-
-    <section class="designW">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 col-md-12 desB">
-                    <h1>Дизайн наше все</h1>
-                    <p>
-                        Мы сделаем сайт красиво и смачно
-                    </p>
-                    <a href="#"><button>Узнайте больше <i class="fas fa-arrow-right"></i></button></a>
+            <div class="row butPos">
+                <div class="col-lg-12 col-md-12 butInNav">
+                    <p>Заказать Услугу</p>
                 </div>
             </div>
         </div>
-    </section>
 
-</main>
+    </nav>
+
+
+
+    <main>
+
+        <section class="contactUs">
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 iconsBl">
+                        <i id="oneI" class="fas fa-phone"></i>
+                        <i id="twoI" class="far fa-comment"></i>
+                    </div>
+                </div>
+
+                <div class="row desScr">
+                    <h2>Обратившись к нам вы получите</h2>
+                    <p>описание услуг </p>
+                </div>
+
+                <div class="row fiveBlockContUs">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+
+                <div class="row fiveBlockInfUs">
+                    <div><p>Lorem ipsum dolor</p></div>
+                    <div><p>Lorem ipsum dolor</p></div>
+                    <div><p>Lorem ipsum dolor</p></div>
+                    <div><p>Lorem ipsum dolor</p></div>
+                    <div><p>Lorem ipsum dolor</p></div>
+                </div>
+
+            </div>
+
+        </section>
+
+        <section class="descOfServ">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 infoServ">
+                        <h1>Описание услуг</h1>
+                        <p>Описание наших услуг</p>
+                        <br>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, amet blanditiis, debitis delectus ea earum excepturi in incidunt ipsam maiores nam natus, optio possimus praesentium quaerat quibusdam ratione reprehenderit tempora. Accusamus accusantium commodi consequatur deleniti dolorem ea earum eos eum excepturi expedita mollitia, numquam porro, quasi quis voluptates! Asperiores cupiditate debitis deleniti dolor eaque error expedita hic maiores possimus quidem, rem reprehenderit unde voluptates. A ad at blanditiis debitis distinctio, eius eligendi et excepturi, facere fuga id impedit ipsam laborum laudantium magnam maiores nam omnis optio perferendis porro possimus quae, quaerat recusandae reprehenderit similique sint tempora ut! Accusantium aliquid amet dolor eligendi eum exercitationem, hic iste laboriosam necessitatibus nesciunt nulla numquam obcaecati, quam, quis quisquam quod rem sed similique voluptas voluptate? A ad, aliquam amet dicta explicabo hic illum nisi porro saepe sint tempora ut veritatis? Autem, dolorem et expedita fugit inventore ipsam itaque maiores mollitia nesciunt nulla repellat soluta voluptatem. Maiores odit quae repellat soluta velit. Animi aut dolor dolore dolorum eaque explicabo facere, hic iure laboriosam modi quas quidem quis sed similique unde. Adipisci aliquid architecto, commodi consequuntur, debitis delectus dolor ducimus error facilis hic illum labore laboriosam laudantium libero magnam maxime nobis omnis perferendis perspiciatis rem sunt!</p>
+                    </div>
+                </div>
+
+                <div class="row buttonServ">
+                    <div><button>Заказать услугу</button></div>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="ouWork">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 workEx">
+                        <div>
+                            <h1>Наши работы</h1>
+                            <p>Тут будут наши примеры работ </p>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="row thereBlock">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+
+                <div class="row buttonOuW">
+                    <div><button>Больше работ</button></div>
+                </div>
+                
+            </div>
+
+        </section>
+
+        <section class="costServ">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 pricSch">
+                        <div>
+                            <h1>Какие же расценки</h1>
+                            <p>расписание расценок будет тут</p>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="row thereMainBlocks">
+                    <div id="radius"></div>
+                    <div id="newCol"></div>
+                    <div id="radiusTwo"></div>
+                </div>
+                
+            </div>
+        </section>
+
+    </main>
+
+
+
+
+    <footer>
+
+        {{ render_esi(url(
+            'contacts'
+        )) }}
+
+    </footer>
+
+
+
+
+                                          {#OldVersionCodeBlock#}
+
+
+
+{#<main>#}
+
+    {#<section class="creatS">#}
+
+        {#<div class="container">#}
+            {#<div class="row">#}
+                {#<div class="col-lg-12 col-md-12 creatInf">#}
+                    {#<h1>Создание сайтов,какой сайт вам нужен?</h1>#}
+                    {#<p>тут описание услуг которые будем предоставлять</p>#}
+                {#</div>#}
+            {#</div>#}
+
+            {#<div class="row firstB">#}
+                {#<div class="col-lg-2 col-md-2 creatF"><p>Лендинг Страница <i class="fas fa-arrow-right"></i></p></div>#}
+                {#<div class="col-lg-2 col-md-2 creatF"><p>Интернет магазин <i class="fas fa-arrow-right"></i></p></div>#}
+                {#<div class="col-lg-2 col-md-2 creatF"><p>Информационный сайт <i class="fas fa-arrow-right"></i></p></div>#}
+                {#<div class="col-lg-2 col-md-2 creatF"><p>Сайт каталог <i class="fas fa-arrow-right"></i></p></div>#}
+            {#</div>#}
+
+            {#<div class="row oneB">#}
+                {#<div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>#}
+                {#<div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>#}
+                {#<div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>#}
+                {#<div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>#}
+            {#</div>#}
+
+            {#<div class="row twoS">#}
+                {#<div class="col-lg-12 col-md-12 twoB">#}
+                    {#<p>Не могу разобраться, заказать звонок</p>#}
+                {#</div>#}
+            {#</div>#}
+
+        {#</div>#}
+
+    {#</section>#}
+
+
+
+    {#<section class="seoW">#}
+
+        {#<div class="container">#}
+            {#<div class="row">#}
+                {#<div class="col-lg-12 col-md-12 seoInf">#}
+                    {#<h1>Давайте попробуем комплексное Seo - продвижение</h1>#}
+                    {#<p>тут описание услуг которые будем предоставлять</p>#}
+                {#</div>#}
+            {#</div>#}
+
+            {#<div class="row firstB">#}
+                {#<div class="col-lg-2 col-md-2 creatF"><p>Лендинг Страница <i class="fas fa-arrow-right"></i></p></div>#}
+                {#<div class="col-lg-2 col-md-2 creatF"><p>Интернет магазин <i class="fas fa-arrow-right"></i></p></div>#}
+            {#</div>#}
+
+            {#<div class="row oneB">#}
+                {#<div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>#}
+                {#<div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>#}
+            {#</div>#}
+
+        {#</div>#}
+
+    {#</section>#}
+
+
+
+    {#<section class="designW">#}
+        {#<div class="container">#}
+            {#<div class="row">#}
+                {#<div class="col-lg-12 col-md-12 desB">#}
+                    {#<h1>Дизайн наше все</h1>#}
+                    {#<p>#}
+                        {#Мы сделаем сайт красиво и смачно#}
+                    {#</p>#}
+                    {#<a href="#"><button>Узнайте больше <i class="fas fa-arrow-right"></i></button></a>#}
+                {#</div>#}
+            {#</div>#}
+        {#</div>#}
+    {#</section>#}
+
+{#</main>#}
+
+
 {% endblock %}
+
+
