--- a/public/Services/services.scss
+++ b/public/Services/services.scss
@@ -143,18 +143,18 @@ nav {
 
 .butInNav {
 
-    color: black;
+    color: white;
+    background-color: #363636;
     text-align: center;
     align-items: center;
     margin-top: 100px;
-    border: solid 1px black;
-    max-width: 200px !important;
+    max-width: 300px !important;
     cursor: pointer;
 
      p {
          padding: 13px 20px;
          margin: 0;
-         color: black;
+         color: white;
 
      }
 }
@@ -270,5 +270,203 @@ nav {
         color: white;
         padding: 10px 35px;
         cursor: pointer;
+    }
+}
+
+.contactUs {
+    width: 100%;
+    height: 725px;
+    background-color: #363636;
+}
+
+.iconsBl {
+    text-align: center;
+    color: white;
+    font-size: 50px;
+    margin: 25px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    i {
+        text-align: center;
+        margin: 0 20px;
+        background-color: red;
+        padding: 25px;
+        border-radius: 50%;
+        cursor: pointer;
+    }
+}
+
+#oneI {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+#twoI {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.desScr {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 35px 0;
+    h2 {
+        color: white;
+    }
+    p {
+        color: #999999;
+        margin-left: 150px;
+    }
+}
+
+.fiveBlockContUs {
+    display: flex;
+    justify-content: center;
+    padding: 25px 0;
+    div {
+        background-color: #555555;
+        margin: 0 14px;
+        width: 200px;
+        height: 200px;
+
+    }
+}
+
+.fiveBlockInfUs {
+    display: flex;
+    justify-content: center;
+    div {
+        margin: 5px 46px;
+        p {
+            color: #555555;
+        }
+    }
+}
+
+.descOfServ {
+    width: 100%;
+    height: 725px;
+    background-color: #242424;
+}
+
+.infoServ {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin: 90px 0;
+
+    h1 {
+        color: white;
+    }
+    p {
+        color: #cccccc;
+        text-align: center;
+    }
+}
+
+.buttonServ {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 115px;
+    div {
+        button {
+            background-color: red;
+            color: white;
+            border: none;
+            padding: 12px 40px;
+            font-size: 20px;
+            cursor: pointer;
+        }
+    }
+}
+
+.workEx {
+    display: flex;
+    justify-content: center;
+    div {
+        margin-top: 200px;
+    }
+}
+
+.thereBlock {
+    padding: 50px 0;
+    div {
+        width: 350px;
+        height: 350px;
+        background-color: #555555;
+        margin: 0 15px;
+        border-radius: 10px;
+    }
+}
+
+.buttonOuW {
+    display: flex;
+    justify-content: center;
+
+    div {
+        button {
+            background-color: white;
+            color: black;
+            border: 3px solid black;
+            padding: 5px 40px;
+            font-size: 20px;
+            cursor: pointer;
+        }
+    }
+}
+
+.costServ {
+    width: 100%;
+    height: 785px;
+    background-color: #242424;
+    margin: 50px 0;
+}
+
+.pricSch {
+    display: flex;
+    justify-content: center;
+    margin: 50px 0;
+    div {
+        h1 {
+            color: white;
+        }
+        p {
+            color: #555555;
+        }
+    }
+}
+
+.thereMainBlocks {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+    #newCol {
+        background-color: #c6c6c6 !important;
+        border-radius: 25px;
+        height: 550px !important;
+        position: relative;
+        bottom: 25px;
+    }
+
+    #radius {
+        border-radius: 50px 0 0 50px;
+    }
+    #radiusTwo {
+        border-radius: 0 50px 50px 0;
+    }
+
+    div {
+        width: 300px;
+        height: 500px;
+        background-color: #555555;
+        margin: 5px 25px;
+
     }
 }
