Added directory media, renamed some files, fix some bugs

--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -1,4 +1,3 @@
-
 <footer>
 
 
@@ -22,19 +21,19 @@
         <div class="row">
             <div class="col-md-12 col-lg-12 listF">
                 <ul>
-                    <a id="FotL" href="#">
+                    <a id="FotL" href="{{ path('home') }}">
                         <li>&copy;2018 OctoWice</li>
                     </a>
-                    <a href="#">
+                    <a href="{{ path('home') }}">
                         <li>Главная</li>
                     </a>
-                    <a href="#">
+                    <a href="{{ path('aboutUs') }}">
                         <li>О Нас</li>
                     </a>
-                    <a href="#">
+                    <a href="{{ path('services') }}">
                         <li>Услуги</li>
                     </a>
-                    <a href="#">
+                    <a href="{{ path('blog') }}">
                         <li>Блог</li>
                     </a>
                     <a href="#">
