--- a/public/Services/services.css
+++ b/public/Services/services.css
@@ -1,73 +1,73 @@
 body {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   box-sizing: border-box; }
-  body .headerB {
-    z-index: 999; }
-    body .headerB ul {
-      list-style-type: none;
-      text-decoration: none;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: center;
-      font-size: 13px; }
-      body .headerB ul a {
-        color: black; }
-      body .headerB ul a:hover {
-        color: #ed1c24;
-        text-decoration: none; }
-    body .headerB li {
-      list-style-type: none;
-      padding: 10px 15px; }
+  /*body .headerB {*/
+    /*z-index: 999; }*/
+    /*body .headerB ul {*/
+      /*list-style-type: none;*/
+      /*text-decoration: none;*/
+      /*display: flex;*/
+      /*flex-direction: row;*/
+      /*align-items: center;*/
+      /*justify-content: center;*/
+      /*font-size: 13px; }*/
+      /*body .headerB ul a {*/
+        /*color: black; }*/
+      /*body .headerB ul a:hover {*/
+        /*color: #ed1c24;*/
+        /*text-decoration: none; }*/
+    /*body .headerB li {*/
+      /*list-style-type: none;*/
+      /*padding: 10px 15px; }*/
 
-#imgInHL {
-  padding: 0 15px;
-  width: 100px;
-  height: auto; }
+/*#imgInHL {*/
+  /*padding: 0 15px;*/
+  /*width: 100px;*/
+  /*height: auto; }*/
 
-#LInH {
-  background-color: #ed1c24;
-  color: white !important;
-  padding: 10px; }
+/*#LInH {*/
+  /*background-color: #ed1c24;*/
+  /*color: white !important;*/
+  /*padding: 10px; }*/
 
-#LInH:hover {
-  color: black !important; }
+/*#LInH:hover {*/
+  /*color: black !important; }*/
 
-.iconsMes {
-  display: flex;
-  justify-content: center;
-  margin-top: 100px; }
-  .iconsMes i {
-    font-size: 24px;
-    padding: 0 10px; }
-  .iconsMes a {
-    color: black; }
-  .iconsMes a:hover {
-    color: #979797; }
+/*.iconsMes {*/
+  /*display: flex;*/
+  /*justify-content: center;*/
+  /*margin-top: 100px; }*/
+  /*.iconsMes i {*/
+    /*font-size: 24px;*/
+    /*padding: 0 10px; }*/
+  /*.iconsMes a {*/
+    /*color: black; }*/
+  /*.iconsMes a:hover {*/
+    /*color: #979797; }*/
 
-.listF ul {
-  list-style-type: none;
-  display: flex;
-  justify-content: center;
-  font-size: 13px; }
-  .listF ul li {
-    padding: 25px 25px; }
-  .listF ul a {
-    color: black; }
-  .listF ul a:hover {
-    color: #ed1c24; }
+/*.listF ul {*/
+  /*list-style-type: none;*/
+  /*display: flex;*/
+  /*justify-content: center;*/
+  /*font-size: 13px; }*/
+  /*.listF ul li {*/
+    /*padding: 25px 25px; }*/
+  /*.listF ul a {*/
+    /*color: black; }*/
+  /*.listF ul a:hover {*/
+    /*color: #ed1c24; }*/
 
-#FotL {
-  padding-right: 85px;
-  color: #bbbbbb; }
+/*#FotL {*/
+  /*padding-right: 85px;*/
+  /*color: #bbbbbb; }*/
 
-#FotR {
-  padding-left: 85px; }
-  #FotR li {
-    display: flex;
-    flex-direction: column;
-    color: #bbbbbb;
-    text-align: center; }
+/*#FotR {*/
+  /*padding-left: 85px; }*/
+  /*#FotR li {*/
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*color: #bbbbbb;*/
+    /*text-align: center; }*/
 
 .infBlock {
   display: flex;
@@ -91,10 +91,10 @@ body {
   display: flex;
   flex-direction: column; }
 
-nav {
+.SrvN {
   text-align: center;
   padding: 100px 0; }
-  nav p {
+ .SrvN p {
     color: #979797;
     margin-right: 150px; }
 
