--- a/templates/components/contactForm.html.twig
+++ b/templates/components/contactForm.html.twig
@@ -1,4 +1,4 @@
-<footer>
+<div>
     <div class="row">
         <div class="col-lg-12 col-md-12 inpInF">
         {{ form_start(form,{'action': path('contacts')}) }}
@@ -14,4 +14,4 @@
         {{ form_end(form) }}
         </div>
     </div>
-</footer>
+</div>
