--- a/templates/pages/servicesPage.html.twig
+++ b/templates/pages/servicesPage.html.twig
@@ -4,13 +4,6 @@
 {% block body %}
 
 
-    <header>
-
-    </header>
-
-
-
-
     <nav class="SrvN">
         <div class="container">
             <div class="row">
@@ -126,111 +119,16 @@
                     <div id="newCol"></div>
                     <div id="radiusTwo"></div>
                 </div>
-                
+
             </div>
         </section>
 
     </main>
-
-
-
-
-    <footer>
-
+    <div class="container">
         {{ render_esi(url(
             'contacts'
         )) }}
-
-    </footer>
-
-
-
-
-                                          {#OldVersionCodeBlock13.01.19#}
-
-
-
-{#<main>#}
-
-    {#<section class="creatS">#}
-
-        {#<div class="container">#}
-            {#<div class="row">#}
-                {#<div class="col-lg-12 col-md-12 creatInf">#}
-                    {#<h1>Создание сайтов,какой сайт вам нужен?</h1>#}
-                    {#<p>тут описание услуг которые будем предоставлять</p>#}
-                {#</div>#}
-            {#</div>#}
-
-            {#<div class="row firstB">#}
-                {#<div class="col-lg-2 col-md-2 creatF"><p>Лендинг Страница <i class="fas fa-arrow-right"></i></p></div>#}
-                {#<div class="col-lg-2 col-md-2 creatF"><p>Интернет магазин <i class="fas fa-arrow-right"></i></p></div>#}
-                {#<div class="col-lg-2 col-md-2 creatF"><p>Информационный сайт <i class="fas fa-arrow-right"></i></p></div>#}
-                {#<div class="col-lg-2 col-md-2 creatF"><p>Сайт каталог <i class="fas fa-arrow-right"></i></p></div>#}
-            {#</div>#}
-
-            {#<div class="row oneB">#}
-                {#<div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>#}
-                {#<div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>#}
-                {#<div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>#}
-                {#<div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>#}
-            {#</div>#}
-
-            {#<div class="row twoS">#}
-                {#<div class="col-lg-12 col-md-12 twoB">#}
-                    {#<p>Не могу разобраться, заказать звонок</p>#}
-                {#</div>#}
-            {#</div>#}
-
-        {#</div>#}
-
-    {#</section>#}
-
-
-
-    {#<section class="seoW">#}
-
-        {#<div class="container">#}
-            {#<div class="row">#}
-                {#<div class="col-lg-12 col-md-12 seoInf">#}
-                    {#<h1>Давайте попробуем комплексное Seo - продвижение</h1>#}
-                    {#<p>тут описание услуг которые будем предоставлять</p>#}
-                {#</div>#}
-            {#</div>#}
-
-            {#<div class="row firstB">#}
-                {#<div class="col-lg-2 col-md-2 creatF"><p>Лендинг Страница <i class="fas fa-arrow-right"></i></p></div>#}
-                {#<div class="col-lg-2 col-md-2 creatF"><p>Интернет магазин <i class="fas fa-arrow-right"></i></p></div>#}
-            {#</div>#}
-
-            {#<div class="row oneB">#}
-                {#<div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>#}
-                {#<div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>#}
-            {#</div>#}
-
-        {#</div>#}
-
-    {#</section>#}
-
-
-
-    {#<section class="designW">#}
-        {#<div class="container">#}
-            {#<div class="row">#}
-                {#<div class="col-lg-12 col-md-12 desB">#}
-                    {#<h1>Дизайн наше все</h1>#}
-                    {#<p>#}
-                        {#Мы сделаем сайт красиво и смачно#}
-                    {#</p>#}
-                    {#<a href="#"><button>Узнайте больше <i class="fas fa-arrow-right"></i></button></a>#}
-                {#</div>#}
-            {#</div>#}
-        {#</div>#}
-    {#</section>#}
-
-{#</main>#}
-
-
+    </div>
 {% endblock %}
 
 
