Added link in base.html.twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,8 @@
             <link rel="stylesheet" href="/AboutUS/aboutUs.css">
             <link rel="stylesheet" href="/Services/services.css">
             <link rel="stylesheet" href="/Blog/blog.css">
+            <link rel="stylesheet" href="/mediaOcto/media.css">
+
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/icon.css" integrity="sha256-Qm8mv8NyEDwniBPKGqdKIpYT0KFZlWY7GJ2F0cs3N/g=" crossorigin="anonymous" />
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/item.css" integrity="sha256-Zmhl7JzF/rWYir2WAAbCgfX9pJtoQ43vQOYsRv6jqAo=" crossorigin="anonymous" />
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/button.css" integrity="sha256-c9MUM6YakVqeTCPglbaeebZVH9GEZay8GPACCYydRaY=" crossorigin="anonymous" />
